[package]
name = "proj_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lettre = "0.10.4"
postgres = "0.19.5"
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
